--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <!-- Nội dung video chính -->
   <div class="video-container">
-    <iframe src="https://youtu.be/u_4MONeoq9Y?si=e5leIc6RNy_hrRmF" allowfullscreen></iframe> title="Video phụ nữ dùng d-ao c/hém chồng lúc nửa đêm" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/u_4MONeoq9Y?si=8SGtcTe2Bdu2HKXe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
   <!-- Popup quảng cáo -->
